--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://googleads.g.doubleclick.net" />
     <link rel="dns-prefetch" href="https://cdn.tailwindcss.com" />
 
-    <!-- Tailwind CSS -->
+    <!-- Tailwind CSS (Development Only - Production uses PostCSS) -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Google AdSense Code -->
@@ -60,19 +60,20 @@
       }
       @keyframes spin { to { transform: rotate(360deg); } }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^6.22.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6"
   }
 }
 </script>
-  </head>
+</head>
   <body class="bg-slate-900 text-slate-50 antialiased">
     <div id="root">
       <div id="app-loader"><div class="spinner"></div></div>
