--- a/index.html
+++ b/index.html
@@ -77,12 +77,9 @@
 }
 </script>
 </head>
-  <body class="bg-slate-900 text-slate-50 antialiased">
-    <div id="root">
-      <div id="app-loader"><div class="spinner"></div></div>
-    </div>
-    
-    <!-- CRITICAL: Entry point for the React Application -->
-    <script type="module" src="/index.tsx"></script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9774042341049510"
+     crossorigin="anonymous"></script>
+     
   </body>
 </html>
